misaligned button fixed

--- a/components/CreateDeal/CreateDealForm.module.css
+++ b/components/CreateDeal/CreateDealForm.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     padding: 20px 0px;
-    margin: 3% 25% 3% 22%;
+    margin: 3% 25%;
 }
 
 .submit-container {
